--- a/src/main/resources/templates/edit_form.html
+++ b/src/main/resources/templates/edit_form.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 		xmlns:th="http://www.thymeleaf.org">
 	<head>
-		<title>New Sale</title>
+		<title>Edit Sales</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<style>
 		body {
@@ -23,12 +23,15 @@
 	</head>
 	<body>
 		<div align="center">
-			<h1>Enter New Sale</h1>
+			<h1>Edit Sales Records</h1>
 			
 			</div>
-			<form action="#" th:action="@{/save}" th:object="${sale}" method="post">
+			<form action="#" th:action="@{/update}" th:object="${sale}" method="post">
 				<table border="1" cellpadding="10">
-				
+					<tr>
+						<td>ID:</td>
+						<td><input type="text" th:field="*{id}" readonly="readonly"></td>
+					</tr>
 					<tr>
 						<td>Item Name:</td>
 						<td><input type="text" th:field="*{itemName}"></td>
